// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./__tests__/giji/comment.marksvg snapshot 1`] = `
"<article>
<svg viewBox=\\"10 10 1200 210\\" style=\\"max-width: 100%; width: 1200px;\\">
<marker id=\\"svg-marker-circle\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"5\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<circle cx=\\"5\\" cy=\\"5\\" r=\\"4\\">
</circle>
</marker>
<marker id=\\"svg-marker-arrow-start\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"3\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<path d=\\"M10,0 L0,5 L10,10 z\\" class=\\"fill\\">
</path>
</marker>
<marker id=\\"svg-marker-arrow-end\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"3\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<path d=\\"M0,0 L10,5 L0,10 z\\" class=\\"fill\\">
</path>
</marker>
<marker id=\\"svg-marker-cross\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"5\\" refY=\\"5\\" orient=\\"0\\" class=\\"edgePath\\">
<path d=\\"M0,0 L10,10 M0,10 L10,0 z\\" class=\\"path\\">
</path>
</marker>
<g>
<rect width=\\"110\\" height=\\"110\\" x=\\"30\\" y=\\"30\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"110\\" height=\\"110\\" x=\\"180\\" y=\\"30\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"110\\" height=\\"110\\" x=\\"330\\" y=\\"30\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"110\\" height=\\"110\\" x=\\"480\\" y=\\"30\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect fill=\\"none\\" width=\\"580\\" height=\\"160\\" x=\\"20\\" y=\\"20\\" rx=\\"10\\" ry=\\"10\\" class=\\"cluster\\">
</rect>
<rect width=\\"110\\" height=\\"110\\" x=\\"630\\" y=\\"30\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"110\\" height=\\"110\\" x=\\"780\\" y=\\"30\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"110\\" height=\\"110\\" x=\\"930\\" y=\\"30\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"110\\" height=\\"110\\" x=\\"1080\\" y=\\"30\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect fill=\\"none\\" width=\\"580\\" height=\\"160\\" x=\\"620\\" y=\\"20\\" rx=\\"10\\" ry=\\"10\\" class=\\"cluster\\">
</rect>
</g>
<g class=\\"edgePath\\">
<path fill=\\"none\\" d=\\"M 600 100 C 650 100 570 100 620 100\\" class=\\"path wide\\">
</path>
<path fill=\\"none\\" d=\\"M 600 100 C 650 100 -20 85 30 85\\" markerStart=\\"url(#svg-marker-circle)\\" markerEnd=\\"url(#svg-marker-circle)\\" class=\\"path solid\\">
</path>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<text labelpos=\\"c\\" label=\\"aaa\\" x=\\"85\\" y=\\"140\\" class=\\"pen\\">aaa</text>
<text labelpos=\\"c\\" label=\\"bbb\\" x=\\"235\\" y=\\"140\\" class=\\"pen\\">bbb</text>
<text labelpos=\\"c\\" label=\\"ccc\\" x=\\"385\\" y=\\"140\\" class=\\"pen\\">ccc</text>
<text labelpos=\\"c\\" label=\\"ddd\\" x=\\"535\\" y=\\"140\\" class=\\"pen\\">ddd</text>
<text labelpos=\\"c\\" label=\\"first\\" x=\\"310\\" y=\\"180\\" class=\\"pen\\">first</text>
<text labelpos=\\"c\\" label=\\"eee\\" x=\\"685\\" y=\\"140\\" class=\\"pen\\">eee</text>
<text labelpos=\\"c\\" label=\\"fff\\" x=\\"835\\" y=\\"140\\" class=\\"pen\\">fff</text>
<text labelpos=\\"c\\" label=\\"ggg\\" x=\\"985\\" y=\\"140\\" class=\\"pen\\">ggg</text>
<text labelpos=\\"c\\" label=\\"hhh\\" x=\\"1135\\" y=\\"140\\" class=\\"pen\\">hhh</text>
<text labelpos=\\"c\\" label=\\"second\\" x=\\"910\\" y=\\"180\\" class=\\"pen\\">second</text>
<text labelpos=\\"c\\" label=\\"main relation\\" x=\\"610\\" y=\\"100\\" class=\\"pen\\">main relation</text>
<text labelpos=\\"c\\" label=\\"sub relation\\" x=\\"315\\" y=\\"92\\" class=\\"pen\\">sub relation</text>
</g>
</svg>
<!---->
</article>"
`;

exports[`./__tests__/giji/japanease.marksvg snapshot 1`] = `
"<article>
<svg viewBox=\\"80 10 600 380\\" style=\\"max-width: 100%; width: 600px;\\">
<marker id=\\"svg-marker-circle\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"5\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<circle cx=\\"5\\" cy=\\"5\\" r=\\"4\\">
</circle>
</marker>
<marker id=\\"svg-marker-arrow-start\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"3\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<path d=\\"M10,0 L0,5 L10,10 z\\" class=\\"fill\\">
</path>
</marker>
<marker id=\\"svg-marker-arrow-end\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"3\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<path d=\\"M0,0 L10,5 L0,10 z\\" class=\\"fill\\">
</path>
</marker>
<marker id=\\"svg-marker-cross\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"5\\" refY=\\"5\\" orient=\\"0\\" class=\\"edgePath\\">
<path d=\\"M0,0 L10,10 M0,10 L10,0 z\\" class=\\"path\\">
</path>
</marker>
<g>
<rect width=\\"110\\" height=\\"110\\" x=\\"100\\" y=\\"100\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"110\\" height=\\"110\\" x=\\"200\\" y=\\"100\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"110\\" height=\\"110\\" x=\\"300\\" y=\\"100\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"110\\" height=\\"110\\" x=\\"400\\" y=\\"100\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"110\\" height=\\"110\\" x=\\"200\\" y=\\"200\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"110\\" height=\\"110\\" x=\\"550\\" y=\\"30\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect fill=\\"none\\" width=\\"580\\" height=\\"330\\" x=\\"90\\" y=\\"20\\" rx=\\"10\\" ry=\\"10\\" class=\\"cluster\\">
</rect>
<rect width=\\"110\\" height=\\"110\\" x=\\"100\\" y=\\"200\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"110\\" height=\\"110\\" x=\\"100\\" y=\\"200\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"110\\" height=\\"110\\" x=\\"300\\" y=\\"200\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect fill=\\"none\\" width=\\"330\\" height=\\"160\\" x=\\"90\\" y=\\"190\\" rx=\\"10\\" ry=\\"10\\" class=\\"cluster\\">
</rect>
</g>
<g class=\\"edgePath\\">
<path fill=\\"none\\" d=\\"M 380 350 C 380 400 40 270 90 270\\" markerStart=\\"url(#svg-marker-cross)\\" markerEnd=\\"url(#svg-marker-cross)\\" class=\\"path solid\\">
</path>
<path fill=\\"none\\" d=\\"M 310 255 C 360 255 50 155 100 155\\" class=\\"path dotted\\">
</path>
<path fill=\\"none\\" d=\\"M 210 155 C 260 155 150 155 200 155\\" class=\\"path dotted\\">
</path>
<path fill=\\"none\\" d=\\"M 410 155 C 460 155 50 255 100 255\\" class=\\"path wide\\">
</path>
<path fill=\\"none\\" d=\\"M 210 255 C 260 255 50 255 100 255\\" markerStart=\\"url(#svg-marker-cross)\\" markerEnd=\\"url(#svg-marker-cross)\\" class=\\"path wide\\">
</path>
<path fill=\\"none\\" d=\\"M 510 155 C 560 155 50 255 100 255\\" markerEnd=\\"url(#svg-marker-cross)\\" class=\\"path solid\\">
</path>
<path fill=\\"none\\" d=\\"M 660 85 C 710 85 250 255 300 255\\" markerEnd=\\"url(#svg-marker-cross)\\" class=\\"path solid\\">
</path>
<path fill=\\"none\\" d=\\"M 410 255 C 460 255 50 255 100 255\\" markerStart=\\"url(#svg-marker-arrow-start)\\" markerEnd=\\"url(#svg-marker-arrow-end)\\" class=\\"path wide\\">
</path>
<path fill=\\"none\\" d=\\"M 410 255 C 460 255 50 155 100 155\\" markerStart=\\"url(#svg-marker-circle)\\" markerEnd=\\"url(#svg-marker-circle)\\" class=\\"path wide\\">
</path>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<text labelpos=\\"c\\" label=\\"参休\\" x=\\"155\\" y=\\"210\\" class=\\"pen\\">参休</text>
<text labelpos=\\"c\\" label=\\"ミツボシ\\" x=\\"255\\" y=\\"210\\" class=\\"pen\\">ミツボシ</text>
<text labelpos=\\"c\\" label=\\"ネイサン\\" x=\\"355\\" y=\\"210\\" class=\\"pen\\">ネイサン</text>
<text labelpos=\\"c\\" label=\\"サイラス\\" x=\\"455\\" y=\\"210\\" class=\\"pen\\">サイラス</text>
<text labelpos=\\"c\\" label=\\"はのん\\" x=\\"255\\" y=\\"310\\" class=\\"pen\\">はのん</text>
<text labelpos=\\"c\\" label=\\"ペラジー\\" x=\\"605\\" y=\\"140\\" class=\\"pen\\">ペラジー</text>
<text labelpos=\\"c\\" label=\\"ほのぼのぐみ\\" x=\\"380\\" y=\\"350\\" class=\\"pen\\">ほのぼのぐみ</text>
<text labelpos=\\"c\\" label=\\"皇帝\\" x=\\"155\\" y=\\"310\\" class=\\"pen\\">皇帝</text>
<text labelpos=\\"c\\" label=\\"はおう\\" x=\\"155\\" y=\\"310\\" class=\\"pen\\">はおう</text>
<text labelpos=\\"c\\" label=\\"かみさま\\" x=\\"355\\" y=\\"310\\" class=\\"pen\\">かみさま</text>
<text labelpos=\\"c\\" label=\\"がちがちぐみ\\" x=\\"255\\" y=\\"350\\" class=\\"pen\\">がちがちぐみ</text>
</g>
</svg>
<!---->
</article>"
`;

exports[`./__tests__/giji/node_only.marksvg snapshot 1`] = `
"<article>
<svg viewBox=\\"20 20 1180 160\\" style=\\"max-width: 100%; width: 1180px;\\">
<marker id=\\"svg-marker-circle\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"5\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<circle cx=\\"5\\" cy=\\"5\\" r=\\"4\\">
</circle>
</marker>
<marker id=\\"svg-marker-arrow-start\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"3\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<path d=\\"M10,0 L0,5 L10,10 z\\" class=\\"fill\\">
</path>
</marker>
<marker id=\\"svg-marker-arrow-end\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"3\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<path d=\\"M0,0 L10,5 L0,10 z\\" class=\\"fill\\">
</path>
</marker>
<marker id=\\"svg-marker-cross\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"5\\" refY=\\"5\\" orient=\\"0\\" class=\\"edgePath\\">
<path d=\\"M0,0 L10,10 M0,10 L10,0 z\\" class=\\"path\\">
</path>
</marker>
<g>
<rect width=\\"110\\" height=\\"110\\" x=\\"30\\" y=\\"30\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"110\\" height=\\"110\\" x=\\"180\\" y=\\"30\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"110\\" height=\\"110\\" x=\\"330\\" y=\\"30\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"110\\" height=\\"110\\" x=\\"480\\" y=\\"30\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"110\\" height=\\"110\\" x=\\"630\\" y=\\"30\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"110\\" height=\\"110\\" x=\\"780\\" y=\\"30\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"110\\" height=\\"110\\" x=\\"930\\" y=\\"30\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"110\\" height=\\"110\\" x=\\"1080\\" y=\\"30\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
</g>
<g class=\\"edgePath\\">
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<text labelpos=\\"c\\" label=\\"aaa\\" x=\\"85\\" y=\\"140\\" class=\\"pen\\">aaa</text>
<text labelpos=\\"c\\" label=\\"bbb\\" x=\\"235\\" y=\\"140\\" class=\\"pen\\">bbb</text>
<text labelpos=\\"c\\" label=\\"ccc\\" x=\\"385\\" y=\\"140\\" class=\\"pen\\">ccc</text>
<text labelpos=\\"c\\" label=\\"ddd\\" x=\\"535\\" y=\\"140\\" class=\\"pen\\">ddd</text>
<text labelpos=\\"c\\" label=\\"eee\\" x=\\"685\\" y=\\"140\\" class=\\"pen\\">eee</text>
<text labelpos=\\"c\\" label=\\"fff\\" x=\\"835\\" y=\\"140\\" class=\\"pen\\">fff</text>
<text labelpos=\\"c\\" label=\\"ggg\\" x=\\"985\\" y=\\"140\\" class=\\"pen\\">ggg</text>
<text labelpos=\\"c\\" label=\\"hhh\\" x=\\"1135\\" y=\\"140\\" class=\\"pen\\">hhh</text>
</g>
</svg>
<!---->
</article>"
`;

exports[`./__tests__/giji/relation.marksvg snapshot 1`] = `
"<article>
<svg viewBox=\\"10 10 1200 210\\" style=\\"max-width: 100%; width: 1200px;\\">
<marker id=\\"svg-marker-circle\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"5\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<circle cx=\\"5\\" cy=\\"5\\" r=\\"4\\">
</circle>
</marker>
<marker id=\\"svg-marker-arrow-start\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"3\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<path d=\\"M10,0 L0,5 L10,10 z\\" class=\\"fill\\">
</path>
</marker>
<marker id=\\"svg-marker-arrow-end\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"3\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<path d=\\"M0,0 L10,5 L0,10 z\\" class=\\"fill\\">
</path>
</marker>
<marker id=\\"svg-marker-cross\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"5\\" refY=\\"5\\" orient=\\"0\\" class=\\"edgePath\\">
<path d=\\"M0,0 L10,10 M0,10 L10,0 z\\" class=\\"path\\">
</path>
</marker>
<g>
<rect width=\\"110\\" height=\\"110\\" x=\\"30\\" y=\\"30\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"110\\" height=\\"110\\" x=\\"180\\" y=\\"30\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"110\\" height=\\"110\\" x=\\"330\\" y=\\"30\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"110\\" height=\\"110\\" x=\\"480\\" y=\\"30\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect fill=\\"none\\" width=\\"580\\" height=\\"160\\" x=\\"20\\" y=\\"20\\" rx=\\"10\\" ry=\\"10\\" class=\\"cluster\\">
</rect>
<rect width=\\"110\\" height=\\"110\\" x=\\"630\\" y=\\"30\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"110\\" height=\\"110\\" x=\\"780\\" y=\\"30\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"110\\" height=\\"110\\" x=\\"930\\" y=\\"30\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect width=\\"110\\" height=\\"110\\" x=\\"1080\\" y=\\"30\\" rx=\\"10\\" ry=\\"10\\" class=\\"box\\">
</rect>
<rect fill=\\"none\\" width=\\"580\\" height=\\"160\\" x=\\"620\\" y=\\"20\\" rx=\\"10\\" ry=\\"10\\" class=\\"cluster\\">
</rect>
</g>
<g class=\\"edgePath\\">
<path fill=\\"none\\" d=\\"M 85 30 C 85 -20 235 -20 235 30\\" markerEnd=\\"url(#svg-marker-arrow-end)\\" class=\\"path solid\\">
</path>
<path fill=\\"none\\" d=\\"M 235 30 C 235 -20 385 -20 385 30\\" markerEnd=\\"url(#svg-marker-arrow-end)\\" class=\\"path solid\\">
</path>
<path fill=\\"none\\" d=\\"M 385 30 C 385 -20 535 -20 535 30\\" markerEnd=\\"url(#svg-marker-circle)\\" class=\\"path solid\\">
</path>
<path fill=\\"none\\" d=\\"M 535 140 C 535 190 685 190 685 140\\" markerEnd=\\"url(#svg-marker-cross)\\" class=\\"path solid\\">
</path>
<path fill=\\"none\\" d=\\"M 685 140 C 685 190 835 190 835 140\\" markerEnd=\\"url(#svg-marker-cross)\\" class=\\"path solid\\">
</path>
<path fill=\\"none\\" d=\\"M 890 85 C 940 85 -20 85 30 85\\" class=\\"path solid\\">
</path>
<path fill=\\"none\\" d=\\"M 600 100 C 650 100 570 100 620 100\\" class=\\"path solid\\">
</path>
<path fill=\\"none\\" d=\\"M 600 100 C 650 100 -20 85 30 85\\" class=\\"path solid\\">
</path>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<rect rx=\\"5\\" ry=\\"5\\" class=\\"pen\\">
</rect>
<text labelpos=\\"c\\" label=\\"aaa\\" x=\\"85\\" y=\\"140\\" class=\\"pen\\">aaa</text>
<text labelpos=\\"c\\" label=\\"bbb\\" x=\\"235\\" y=\\"140\\" class=\\"pen\\">bbb</text>
<text labelpos=\\"c\\" label=\\"ccc\\" x=\\"385\\" y=\\"140\\" class=\\"pen\\">ccc</text>
<text labelpos=\\"c\\" label=\\"ddd\\" x=\\"535\\" y=\\"140\\" class=\\"pen\\">ddd</text>
<text labelpos=\\"c\\" label=\\"first\\" x=\\"310\\" y=\\"180\\" class=\\"pen\\">first</text>
<text labelpos=\\"c\\" label=\\"eee\\" x=\\"685\\" y=\\"140\\" class=\\"pen\\">eee</text>
<text labelpos=\\"c\\" label=\\"fff\\" x=\\"835\\" y=\\"140\\" class=\\"pen\\">fff</text>
<text labelpos=\\"c\\" label=\\"ggg\\" x=\\"985\\" y=\\"140\\" class=\\"pen\\">ggg</text>
<text labelpos=\\"c\\" label=\\"hhh\\" x=\\"1135\\" y=\\"140\\" class=\\"pen\\">hhh</text>
<text labelpos=\\"c\\" label=\\"second\\" x=\\"910\\" y=\\"180\\" class=\\"pen\\">second</text>
</g>
</svg>
<!---->
</article>"
`;

exports[`./__tests__/giji/relation_only.marksvg snapshot 1`] = `
"<article>
<svg viewBox=\\"0 0 130 160\\" style=\\"max-width: 100%; width: 130px;\\">
<marker id=\\"svg-marker-circle\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"5\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<circle cx=\\"5\\" cy=\\"5\\" r=\\"4\\">
</circle>
</marker>
<marker id=\\"svg-marker-arrow-start\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"3\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<path d=\\"M10,0 L0,5 L10,10 z\\" class=\\"fill\\">
</path>
</marker>
<marker id=\\"svg-marker-arrow-end\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"3\\" refY=\\"5\\" orient=\\"auto\\" class=\\"edgePath\\">
<path d=\\"M0,0 L10,5 L0,10 z\\" class=\\"fill\\">
</path>
</marker>
<marker id=\\"svg-marker-cross\\" viewBox=\\"0 0 10 10\\" markerUnits=\\"userSpaceOnUse\\" markerWidth=\\"20\\" markerHeight=\\"20\\" refX=\\"5\\" refY=\\"5\\" orient=\\"0\\" class=\\"edgePath\\">
<path d=\\"M0,0 L10,10 M0,10 L10,0 z\\" class=\\"path\\">
</path>
</marker>
<g>
</g>
<g class=\\"edgePath\\">
</g>
</svg>
<div class=\\"errors\\">
<div class=\\"error\\"> aaa--&gt;bbb 要素が未定義です。</div>
<div class=\\"error\\"> bbb--&gt;ccc 要素が未定義です。</div>
<div class=\\"error\\"> ccc--oddd 要素が未定義です。</div>
<div class=\\"error\\"> ddd--xeee 要素が未定義です。</div>
<div class=\\"error\\"> eee--Xfff 要素が未定義です。</div>
<div class=\\"error\\"> fff--aaa 要素が未定義です。</div>
</div>
</article>"
`;
